--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,15 @@
+:root {
+  --primaryBorderColor: #4F4F4F;
+  --primaryOrangeColor:#EB5757;
+  --primaryTextColor: #333333;
+  --secondaryTextColor:#BDBDBD;
+  --typeTextColor:#828282;
+  --typeTextWhiteColor:#FFFFFF;
+  
+}
+
+
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  /* text-align: center; */
+  margin:2rem 2.5rem;
 }
